--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body onload="onload()">
     <div class="container">
       <div class="left-side-container">
         <div class="heading">
