Modified the logic for the winning game

--- a/game.html
+++ b/game.html
@@ -20,12 +20,12 @@
 
         <div class="hangman-image-div">
           <div class="hangman-wrapper">
-            <div class="head"></div>
-            <div class="body"></div>
-            <div class="leftarm"></div>
-            <div class="rightarm"></div>
-            <div class="leftleg"></div>
-            <div class="rightleg"></div>
+            <div id ="head" class="head"></div>
+            <div id = "body" class="body"></div>
+            <div id = "leftarm" class="leftarm"></div>
+            <div id ="rightarm" class="rightarm"></div>
+            <div id = "leftleg" class="leftleg"></div>
+            <div id = "rightleg" class="rightleg"></div>
           </div>
         </div>
       </div>
