Added effects to the button

--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
       <div class="left-side-container">
         <div class="heading">
           <p class="heading-para">THE VANISHMAN GAME</p>
+          <div class="tooltip"><img src="info.png"></div>
           <p class="sub-heading-para">(5 letter words)</p>
           <div class="buttons">
             <button class="start" onclick="start()">START PLAY</button>
@@ -20,9 +21,9 @@
 
         <div class="status">
           <div class="score">
-            <h4>Your Score:</h4>
+            <h4 style="font-style: italic;">Your Score</h4>
             <p id="yourscore">0</p>
-            <h4>Computer Score:</h4>
+            <h4 style="font-style: italic;">Computer Score</h4>
             <p id="compscore">0</p>
           </div>
 
