Added a custom font

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
           <div class="tooltip"><img src="info.png">
             <span class="tooltiptext">
               <ul>
-              <li class="info">This is a two player game against Computer</li>
+              <li class="info">This is a two player game Player1 Vs Computer</li>
               <li class="info">Press "Start Play" button to start the game</li>
               <li class="info">Guess the word using the clue given and start typing a single letter at once</li>
               <li class="info">Each player have 3 guesses</li>
@@ -34,9 +34,9 @@
 
         <div class="status">
           <div class="score">
-            <h4 style="font-style: italic;">Your Score</h4>
+            <h4 style="font-style: italic; font-family: customfont;">Your Score</h4>
             <p id="yourscore">0</p>
-            <h4 style="font-style: italic;">Computer Score</h4>
+            <h4 style="font-style: italic; font-family: customfont;">Computer Score</h4>
             <p id="compscore">0</p>
           </div>
 
@@ -55,7 +55,7 @@
 
       <div class="right-side-container">
         <div class="incorrect-guesses-div">
-          <h4>Incorrect Guesses</h4>
+          <h4 style="font-family: customfont;">Incorrect Guesses</h4>
           <p id="incorrect_guess_no">0/6</p>
         </div>
         <div class="list-div">
