Added the failure sound and renamed the Reset button

--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
           <p class="sub-heading-para">(5 letter words)</p>
           <div class="buttons">
             <button class="start" onclick="start()">START PLAY</button>
-            <button class="reset" onclick="reset()" disabled="true">RESET</button>
+            <button class="reset" onclick="reset()" disabled="true">END GAME</button>
           </div>
         </div>
 
