Added seperate div to display the word HINT

--- a/game.html
+++ b/game.html
@@ -67,7 +67,7 @@
             <li class="letter"></li>
           </ul>
         </div>
-        
+        <div class="hint">HINT:</div>
         <div class="hint-div">
           <p class="hint-display-div" id="hint-display-div"></p>
         </div>
