Added the overlay effect for computer's turn

--- a/game.html
+++ b/game.html
@@ -154,8 +154,11 @@
           </div>
         </div>
       </div>
+      
     </div>
-
+    <div id="overlay">
+      <div id="text">COMPUTER"S TURN</div>
+  </div>
     <script src="script.js" defer></script>
   </body>
 </html>
