Added overlay effect for messages of displaying turns

--- a/game.html
+++ b/game.html
@@ -156,8 +156,11 @@
       </div>
       
     </div>
-    <div id="overlay">
-      <div id="text">COMPUTER"S TURN</div>
+    <div id="computeroverlay">
+      <div id="computertext">COMPUTER"S TURN</div>
+  </div>
+  <div id="useroverlay">
+    <div id="usertext">YOUR TURN</div>
   </div>
     <script src="script.js" defer></script>
   </body>
