Added the logic for 5 rounds

--- a/game.html
+++ b/game.html
@@ -27,8 +27,8 @@
           </div>
           <p class="sub-heading-para">(5 letter words)</p>
           <div class="buttons">
-            <button class="start" onclick="start()">START PLAY</button>
-            <button class="reset" onclick="reset()" disabled="true">END GAME</button>
+            <button class="start" onclick="start()">START GAME</button>
+            <button class="reset" onclick="reset()">END GAME</button>
           </div>
         </div>
 
@@ -57,6 +57,10 @@
         <div class="incorrect-guesses-div">
           <h4 style="font-family: customfont;">Incorrect Guesses</h4>
           <p id="incorrect_guess_no">0/6</p>
+        </div>
+        <div class="round-div">
+          <h4 style="font-family: customfont;">ROUND</h4>
+          <p id="round_no">1/5</p>
         </div>
         <div class="list-div">
           <ul class="guessing-word" id="character-list">
