Modified the instructions of the game and its font

--- a/game.html
+++ b/game.html
@@ -15,13 +15,13 @@
             <span class="tooltiptext">
               <ul>
               <li class="info">This is a two player game Player1 Vs Computer</li>
-              <li class="info">Press "Start Play" button to start the game</li>
+              <li class="info">Press "START GAME" button to start the game</li>
               <li class="info">Guess the word using the clue given and start typing a single letter at once</li>
               <li class="info">Each player have 3 guesses</li>
               <li class="info">Whoever found the word would be the winner in that round and they will be scored.</li>
               <li class="info">When you want to quit the game, the winner of this game will be decided based on the scores.</li>
-              <li class="info">You can play any number of words.</li>
-              <li class="info">Always press Restart whenever you want to restart the new game.</li>
+              <li class="info">You can play 5 rounds of words.</li>
+              <li class="info">Always press End GAME whenever you want to restart the new game.</li>
             </ul>
             </span>
           </div>
